force-app/main/default/objects/Asset/fields/DIscount_Rate__c.field-meta.xml
<CustomField>
    <fullName>DIscount_Rate__c</fullName>
    <description>자산의 할인율</description>
    <label>할인율</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>