force-app/main/default/objects/Asset/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>판매</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>자산</relationshipLabel>
    <relationshipName>Asset_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>