force-app/main/default/objects/Asset/fields/SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SerialNumber__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>시리얼넘버</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>