force-app/main/default/objects/Asset/listViews/AllAssets.listView-meta.xml
<ListView>
    <fullName>AllAssets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ASSET.PURCHASE_DATE</columns>
    <columns>ASSET.PRICE</columns>
    <columns>SerialNumber__c</columns>
    <columns>PRODUCT2.FAMILY_ENUM</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Refund__c</columns>
    <filterScope>Everything</filterScope>
    <label>All 자산</label>
</ListView>